--- a/style.css
+++ b/style.css
@@ -4,42 +4,28 @@
 .navbar {
   background-color: #e6f8f9;
 }
-
 .navbar a {
   color: #363636 !important;
   font-size: 20px;
 }
-
 .dropdown-toggle::after {
   display: none;
 }
-
 .toggle-icon {
   color: #4a4a4a;
 }
-
 .navbar-toggler:hover {
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: rgba(0, 0, 0, 0.5);
 }
-
 .navbar .nav-item:hover .dropdown-menu {
   display: block;
 }
-
 .course-btn-bg {
   background-color: rgb(26, 200, 187, 0.8) !important;
-  border-color: none !important;
-  outline: none !important;
 }
-
-/* .course-btn-bg:active {
-  outline: none !important;
-  border-color: none !important;
-} */
 .course-btn-bg:hover {
   background-color: rgb(26, 200, 187) !important;
 }
-
 .log-in-btn {
   border: 3px solid #1b1642 !important;
 }
@@ -47,12 +33,10 @@
   background-color: #1b1642 !important;
   color: #fff !important;
 }
-
 .intro {
   background-color: #e6f8f9;
   min-height: 100vh;
 }
-
 h1,
 h2 {
   font-family: "Epilogue", sans-serif;
@@ -65,15 +49,11 @@ h2 {
   font-size: 64px;
   color: #1b1642;
 }
-
 .card {
   border: none;
 }
 p {
   font-size: 12px;
-}
-.size-14 {
-  font-size: 14px;
 }
 .font-weight-600 {
   font-weight: 600;
@@ -81,10 +61,6 @@ p {
 .font-weight-500 {
   font-weight: 500;
 }
-.about {
-  min-height: 100vh;
-}
-
 .alumnum-color {
   color: #d2d0db !important;
 }
@@ -101,7 +77,6 @@ p {
 .app-text-color {
   color: #1b1642;
 }
-
 .dark-blue {
   color: rgb(11, 9, 28) !important;
 }
@@ -114,7 +89,6 @@ p {
 .alumni-name {
   color: rgb(245, 245, 245);
 }
-
 .footer-color {
   color: rgb(230, 230, 230) !important;
   text-decoration: none;
@@ -128,7 +102,6 @@ p {
 .rep-btn {
   background-color: rgb(23, 19, 56) !important;
 }
-
 .card-bg-color {
   background-color: rgb(27, 22, 66) !important;
 }
@@ -145,18 +118,15 @@ a {
   border-radius: 50%;
 }
 
- @media only screen and (max-width: 1150px) {
-
+@media only screen and (max-width: 1150px) {
   .hide-link {
     display: none;
   }
-
-} 
+}
 
 @media only screen and (max-width: 991px) {
   .navbar .nav-item .dropdown-menu {
     display: block;
-   
   }
   .navbar-nav {
     background-color: white;
@@ -183,20 +153,19 @@ a {
   .log-in {
     display: none;
   }
-  
 }
 
 @media only screen and (max-width: 962px) {
   .hero-img {
     display: none;
   }
-  .sub-header {
-    font-size: 34px;
-  }
   .hide-link {
     display: block;
   }
   .navbar .dropdown-item {
     font-size: 18px;
+  }
+  .alumni-head {
+    font-size: 40px;
   }
 }
